<resources>
    <string name="app_name">PopularMovies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="refresh">Refresh</string>
    <string name="original_title">Original title</string>
    <string name="vote_average">Vote average</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="no_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="request_internet_connection">Please connect to the internet.</string>
    <string name="thumbnail">Cover image</string>
    <string name="title">Title</string>
    <string name="favourites">Favourites</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="no_videos">No videos available</string>
    <string name="no_reviews">No reviews available</string>
    <string name="remove_all_favourites">Remove all favourites</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="remove">remove</string>
    <string name="favourites_removed">favourites removed</string>
    <string name="content_image_favourite" translatable="false">Star button to favourite and unfavourite movie</string>
    <string name="content_image_backdrop" translatable="false">Background image of movie</string>
    <string name="content_image_poster" translatable="false">Poster of movie</string>
    <string name="open_in_web">Open in web</string>
    <string name="search">Search</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="pref_key_language">key_language</string>
    <string name="choose_language">Choose language</string>
</resources>
