<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frameLayoutBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageViewBackdrop"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="fitStart"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </FrameLayout>

                <TextView
                    android:id="@+id/textViewTitle"
                    style="@style/TvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/frameLayoutBackdrop"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/frameLayoutBackdrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Title" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewPoster"
                    android:layout_width="160dp"
                    android:layout_height="240dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1973-03-14"
                    style="@style/TvContent"
                    android:layout_toRightOf="@+id/imageViewPoster"
                    android:layout_alignBottom="@+id/imageViewPoster"/>

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    style="@style/TvLabel"
                    android:layout_above="@id/date"
                    android:layout_alignStart="@+id/date"/>

                <TextView
                    android:id="@+id/vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8.3"
                    style="@style/TvContent"
                    android:layout_above="@+id/dateLabel"
                    android:layout_alignStart="@+id/date"/>

                <TextView
                    android:id="@+id/voteLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average"
                    style="@style/TvLabel"
                    android:layout_above="@id/vote"
                    android:layout_alignStart="@+id/date"/>

                <TextView
                    android:id="@+id/originalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="The Godfather"
                    style="@style/TvContent"
                    android:layout_above="@+id/voteLabel"
                    android:layout_alignStart="@+id/date"/>

                <TextView
                    android:id="@+id/originalTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original_title"
                    style="@style/TvLabel"
                    android:layout_above="@id/originalTitle"
                    android:layout_alignStart="@+id/date"/>



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>